fix details on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,12 @@ h3 {
     gap: 20px;
 }
 
+@media only screen and (max-width:767px) {
+    .movie-details {
+        flex-direction: column;
+    }
+}
+
 .movie-details__poster {
     height: 400px;
 }
